--- a/styles/componential.scss
+++ b/styles/componential.scss
@@ -9,7 +9,7 @@ button, .button{
     white-space: nowrap;
     text-decoration: none;
     padding: 8px 10px;
-    margin: 12px;
+    margin: 12px 4px;
     cursor: pointer;
 
     &:hover{
@@ -20,5 +20,29 @@ button, .button{
         outline: none;
         box-shadow: 0 0 4px black;
         border: 1px white;
+    }
+}
+button.disabled{
+    border: 0;
+    border-radius: 6px;
+    background: #aaa;
+    color: white;
+    font-family: system-ui, sans-serif;
+    font-size: 1rem;
+    line-height: 1.2;
+    white-space: nowrap;
+    text-decoration: none;
+    padding: 8px 10px;
+    margin: 12px 4px;
+    cursor: pointer;
+
+    &:hover{
+        background: #aaa;
+    }
+
+    &:focus{
+        outline: none;
+        box-shadow: none;
+        border: none;
     }
 }
