--- a/styles/componential.scss
+++ b/styles/componential.scss
@@ -71,3 +71,9 @@ button.disabled{
         border: 1px white;
     }
 }
+
+input{
+    border: 1px solid gray;
+    border-radius: 4px;
+    padding: 8px;
+}
