--- a/core/styles/componential.scss
+++ b/core/styles/componential.scss
@@ -1,4 +1,27 @@
-button, .button{
+.btn{
+    padding: 12px 40px;
+    background: #9CCD62;
+    border-radius: 100px;
+
+    font-family: Roboto;
+    font-size: 18px;
+    color: #FFFFFF;
+    border: 0;
+    transition: background 0.1s;
+    margin: 4px;
+
+    &:hover{
+        background: #729c3d;
+    }
+    
+}
+
+input{
+    font-family: Roboto;
+    font-size: 18px;
+}
+
+.button{
     border: 0;
     border-radius: 6px;
     background: black;
@@ -11,6 +34,14 @@ button, .button{
     padding: 8px 10px;
     margin: 12px 4px;
     cursor: pointer;
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .icon{
+        margin-right: 8px;
+    }
 
     &:hover{
         background: #333;
