--- a/core/styles/globals.scss
+++ b/core/styles/globals.scss
@@ -1,7 +1,10 @@
 @import './componential.scss';
+@import './utilities.scss';
+@import './typefaces.scss';
 
 html,
 body {
+  height: 100%;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -15,6 +18,7 @@ a {
 
 *, *:before, *:after {
   box-sizing: inherit;
+  margin: 0;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
@@ -30,4 +34,11 @@ ol, ul {
 img {
   max-width: 100%;
   height: auto;
+}
+
+button, input{
+  &:focus{
+      outline: none;
+      border: 1px white;
+  }
 }
